--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,6 +8,7 @@ jobs:
       matrix:
         node: [10]
     steps:
+      - uses: actions/checkout@v1
       - name: Setup Node JS
         uses: actions/setup-node@v1
         with:
