--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "lib": ["es2018", "DOM"],
     "module": "commonjs",
-    "target": "es2018"
+    "target": "es2018",
+    "sourceMap": true
   },
   "include": [
     "src"
