--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,3 +21,11 @@ jobs:
         run: |
           npm test
           codecov --token=${{ secrets.CODECOV_TOKEN }}
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: ./coverage.xml
+          flags: unittests
+          name: codecov-umbrella
+          fail_ci_if_error: true
