--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "lib": ["es2018", "DOM"],
     "module": "commonjs",
     "target": "es2018",
-    "sourceMap": true
+    "sourceMap": true,
+    "inlineSourceMap": true
   },
   "include": [
     "src"
