--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/rusith/gene-rator#readme",
   "devDependencies": {
     "@types/jest": "^24.0.24",
+    "@types/node": "^13.1.0",
     "jest": "^24.9.0",
     "ts-jest": "^24.2.0",
     "typescript": "^3.7.4"
