--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,26 @@
 name: Test the Code
 on: push
 jobs:
+  lint:
+    name: Lint the Code
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node: [10]
+    steps:
+      - uses: actions/checkout@v1
+      - name: Setup Node JS
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node }}
+      - name: Install Node Packages
+        run: npm install
+      - name: Lint Using TsLint
+        run: ./node_modules/.bin/tslint --project .
   test:
     name: Run Tests
     runs-on: ubuntu-latest
+    needs: lint
     strategy:
       matrix:
         node: [10]
