--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/node": "^13.1.0",
     "jest": "^24.9.0",
     "ts-jest": "^24.2.0",
+    "tslint": "^5.20.1",
     "typescript": "^3.7.4"
   }
 }
