added typescript to the job

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
       - name: Install TsLint
-        run: npm i -g tslint
+        run: npm i -g tslint typescript
       - name: Lint Using TsLint
         run: tslint --project .
   test:
