--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/rusith/gene-rator#readme",
   "devDependencies": {
+    "@types/handlebars": "^4.1.0",
     "@types/jest": "^24.0.24",
     "@types/node": "^13.1.0",
     "jest": "^24.9.0",
@@ -30,6 +31,7 @@
     "typescript": "^3.7.4"
   },
   "dependencies": {
+    "handlebars": "^4.5.3",
     "reflect-metadata": "^0.1.13"
   }
 }
