--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,12 @@
     "target": "es2018",
     "inlineSourceMap": true,
     "baseUrl": "./src",
-    "experimentalDecorators": true
+    "outDir": "./lib",
+    "experimentalDecorators": true,
+    "declaration": true
   },
   "include": [
     "src"
-  ]
+  ],
+  "exclude": ["__tests__", "node_modules", "__mocks__"]
 }
