--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "gimbli",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A file generator that can generate multiple files from a single command with Handlebars support",
   "main": "index.js",
   "types": "lib/index.d.ts",
-  "files": ["lib/**/*"],
+  "files": [
+    "lib/**/*"
+  ],
   "scripts": {
     "test": "jest",
     "lint": "tslint -p tsconfig.json",
@@ -13,7 +15,7 @@
     "testWithCoverage": "jest --coverage",
     "prepare": "npm run build",
     "prepublishOnly": "npm run lint && npm run test",
-    "preversion" : "npm run lint"
+    "preversion": "npm run lint"
   },
   "repository": {
     "type": "git",
