--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "typescript": "^3.7.4"
   },
   "dependencies": {
-    "handlebars": "^4.5.3"
+    "handlebars": "^4.5.3",
+    "safe-eval": "^0.4.1"
   }
 }
