--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,7 @@ on:
       - 'release'
 env:
   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+  TEST: ${{ secrets.TEST }}
 jobs:
   lint:
     name: Lint the Code
@@ -18,6 +19,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node }}
+      - run: echo $TEST
       - name: NPM Install
         run: npm i
       - name: Lint Using TsLint
