--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,7 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
       - run: echo $TEST
+      - run: echo $NPM_TOKEN
       - name: NPM Install
         run: npm i
       - name: Lint Using TsLint
